[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Walls.gd" type="Script" id=1]
[ext_resource path="res://Light.tscn" type="PackedScene" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=2]

[node name="Walls" type="Spatial"]
script = ExtResource( 1 )

[node name="Wall0" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall0"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Wall0/StaticBody"]
shape = SubResource( 2 )

[node name="Light" parent="Wall0" instance=ExtResource( 2 )]

[node name="Wall1" type="MeshInstance" parent="."]
editor/display_folded = true
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall1"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Wall1/StaticBody"]
shape = SubResource( 2 )

[node name="Light" parent="Wall1" instance=ExtResource( 2 )]

[node name="Wall2" type="MeshInstance" parent="."]
editor/display_folded = true
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall2"]
editor/display_folded = true
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Wall2/StaticBody"]
shape = SubResource( 2 )

[node name="Light" parent="Wall2" instance=ExtResource( 2 )]

[node name="Wall3" type="MeshInstance" parent="."]
editor/display_folded = true
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall3"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Wall3/StaticBody"]
shape = SubResource( 2 )

[node name="Light" parent="Wall3" instance=ExtResource( 2 )]
